<resources>
    <string name="app_name">Tags Pro</string>
    <string name="action_settings">Settings</string>
    <string name="tag_collection_edit">Edit</string>
    <string name="tag_collection_select">Select</string>
    <string name="tag_collection_delete">Delete</string>
    <string name="tag_name">#%s</string>
    <string name="open_instagram">Open Instagram</string>
    <string name="copy_successful">%d Tags copied to your clipboard</string>
    <string name="active_tags_count">%d Active Tags</string>
    <string name="default_no_tag_in_group">No tags in this collection</string>
    <string name="default_no_active_tags">No active Tags. Click on a tag to activate it</string>
    <string name="edit_collection">Edit Collection</string>
    <string name="tags_count">%d Tags</string>
    <string name="save">Save</string>
    <string name="default_tags">&#35;cool &#35;tags &#35;only hash_optional @or_user</string>
    <string name="no_tags_selected">No tags selected</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_unselected">Delete Unselected</string>
    <string name="settings">Settings</string>
    <string name="active_tags">Active Tags</string>
    <string name="copy_tags">Copy tags</string>
    <string name="preference_shuffle_on_copy">Shuffle on copy</string>
    <string name="preference_one_tag_per_line">One tag per line</string>
    <string name="preference_dots_before_tags">Dots before tags</string>
    <string name="preference_disable_space">Space between tags</string>
    <string name="backup">Backup</string>
    <string name="preference_export">Export</string>
    <string name="preference_import">Import</string>
    <string name="shares_count">Shared ~%s times</string>
    <string name="too_many_tags_selected">Too many tags selected, you can have only 30!</string>

    <string name="copy">Copy</string>
    <string name="select_all">Select all</string>
    <string name="random_select">Random select</string>
    <string name="quick_add">Quick add</string>
    <string name="more_options">More options</string>
    <string name="deselect_all">Deselect all</string>
    <string name="save_as_collection">Save as collection</string>
    <string name="shuffle_selected">Shuffle selected</string>
    <string name="search_error">Error while searching, please try again</string>
    <string name="export_successs">Export successful</string>
    <string name="import_success">Import successful</string>
    <string name="action_collapse_all">Collapse All</string>
    <string name="tags_collection_default_msg">Add a new tags Collection or search for some tags.\nYou can then save the selected tags as a collection.</string>
</resources>
