<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

    <PreferenceCategory android:title="@string/copy_tags">

        <SwitchPreference
            android:key="shuffle_on_copy"
            android:defaultValue="false"
            android:title="@string/preference_shuffle_on_copy" />

        <SwitchPreference
            android:key="one_tag_per_line"
            android:disableDependentsState="true"
            android:defaultValue="false"
            android:title="@string/preference_one_tag_per_line" />

        <SwitchPreference
            android:key="enable_space"
            android:defaultValue="true"
            android:dependency="one_tag_per_line"
            android:title="@string/preference_disable_space" />

        <SeekBarPreference
            android:defaultValue="0"
            android:key="dots_before_tags"
            android:max="8"
            android:title="@string/preference_dots_before_tags" />

        <!--TODO Highlight recently used?-->

    </PreferenceCategory>

</PreferenceScreen>